# devpower-task

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/config/: db.py  settings.py
app/models/: country.py  init_db.py  regions.py
app/parsers/: initial_parser.py  parser.py  wiki_parser.py
app/services/: data_get.py  data_print.py
commands/: wait-for-postgres.sh
script/: wait-for-postgres.sh
