[project]
name = "devpower-task"
version = "0.1.0"
description = ""
authors = [
    {name = "Serhii Basok",email = "sergeybsk19@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.123.5,<0.124.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg (>=3.3.1,<4.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "bs4 (>=0.0.2,<0.0.3)"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "greenlet (>=3.2.4,<4.0.0)"
]

[tool.poetry]
package-mode = false